第二章完結

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,12 @@
   <%= @user.email %>
 </p>
 
+
+  <%= @microposts.content %>
+  <%# @microposts.each do |micropost| %>
+    <%#= micropost.content %>
+  <%# end %>
+
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
